--- a/composer.json
+++ b/composer.json
@@ -9,10 +9,13 @@
         "barryvdh/laravel-debugbar": "^2.3",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
-        "aimeos/aimeos-laravel": "~2017.01"
+        "aimeos/aimeos-laravel": "~2017.01",
+        "laravelcollective/annotations": "^5.4.0",
+        "laravelcollective/html": "^5.3.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
+        "krlove/eloquent-model-generator": "^1.2",
         "mockery/mockery": "0.9.*",
         "phpunit/phpunit": "~5.7"
     },
